--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,11 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - .:/app
-      - node_modules:/app/node_modules
+      - type: bind
+        source: .
+        target: /home/node/app
+      - type: volume
+        source: node_modules
+        target: /home/node/app/node_modules
 volumes:
   node_modules: {}
