--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -21,8 +22,14 @@
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "8.3.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "prettier": "2.5.1",
     "typescript": "4.5.4"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.1.1",
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "**/*": "prettier --write --ignore-unknown"
+  }
 }
