--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.3.0",
-    "@mui/material": "^5.2.7",
-    "next": "12.0.8",
-    "next-seo": "^4.29.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.3.1",
+    "next": "^12.0.9",
+    "next-seo": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.5",
+    "@types/node": "^17.0.13",
     "@types/react": "17.0.38",
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
+    "eslint": "^8.8.0",
+    "eslint-config-next": "^12.0.9",
     "eslint-config-prettier": "8.3.0",
     "husky": ">=6",
-    "lint-staged": ">=10",
+    "lint-staged": "^12.3.2",
     "prettier": "2.5.1",
-    "typescript": "4.5.4"
+    "typescript": "^4.5.5"
   },
   "packageManager": "yarn@3.1.1",
   "lint-staged": {
