--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "postinstall": "husky install"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.3.1",
-    "next": "^12.0.9",
-    "next-seo": "^5.0.0",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
+    "next": "^12.1.0",
+    "next-seo": "^5.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "^17.0.13",
-    "@types/react": "17.0.38",
-    "eslint": "^8.8.0",
-    "eslint-config-next": "^12.0.9",
-    "eslint-config-prettier": "8.3.0",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "eslint": "^8.10.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-config-prettier": "^8.4.0",
     "husky": ">=6",
-    "lint-staged": "^12.3.2",
+    "lint-staged": "^12.3.4",
     "prettier": "2.5.1",
     "typescript": "^4.5.5"
   },
