--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@babel/core": "^7.17.5",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.4",
@@ -29,6 +30,7 @@
     "prettier": "2.5.1",
     "typescript": "^4.5.5"
   },
+  "packageManager": "pnpm@6.32.2",
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
     "**/*": "prettier --write --ignore-unknown"
