--- a/.prettierignore
+++ b/.prettierignore
@@ -40,3 +40,6 @@ yarn-error.log*
 # yarn
 # https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
 .yarn/*
+
+# pnpm
+pnpm-lock.yaml
