--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
+    "clsx": "^1.1.1",
     "next": "^12.1.0",
     "next-seo": "^5.1.0",
     "react": "17.0.2",
