--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/material": "^5.5.1",
     "clsx": "^1.1.1",
     "next": "^12.1.0",
+    "next-pwa": "^5.4.6",
     "next-seo": "^5.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "webpack": ">=5.9.0 <6.0.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
