--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,16 @@
 {
   "name": "Mogyuchi",
+  "short_name": "Mogyuchi",
+  "description": "Mogyuchi's website",
+  "lang": "ja-JP",
+  "start_url": "/",
+  "scope": "/",
+  "display": "standalone",
+  "orientation": "any",
+  "theme_color": "#ec407a",
+  "background_color": "#fff7ff",
   "icons": [
     { "src": "/icons/icon-192.png", "type": "image/png", "sizes": "192x192" },
     { "src": "/icons/icon-512.png", "type": "image/png", "sizes": "512x512" }
-  ],
-  "theme_color": "#ec407a",
-  "background_color": "#fff7ff",
-  "start_url": "/",
-  "display": "standalone"
+  ]
 }
