--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "postinstall": "git config --local core.hooksPath .githooks && chmod -R +x .githooks/"
   },
   "dependencies": {
-    "@babel/core": "^7.17.7",
+    "@babel/core": "^7.17.8",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.1",
+    "@mui/material": "^5.5.2",
     "clsx": "^1.1.1",
-    "next": "^12.1.0",
+    "next": "^12.1.1",
     "next-pwa": "^5.4.6",
-    "next-seo": "^5.1.0",
+    "next-seo": "^5.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.9",
-    "webpack": ">=5.9.0 <6.0.0"
+    "webpack": "^5.70.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.40",
-    "eslint": "^8.11.0",
-    "eslint-config-next": "^12.1.0",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "eslint": "^8.12.0",
+    "eslint-config-next": "^12.1.1",
     "eslint-config-prettier": "^8.5.0",
-    "prettier": "2.6.0",
-    "typescript": "^4.6.2"
+    "prettier": "2.6.1",
+    "typescript": "^4.6.3"
   },
   "packageManager": "pnpm@6.32.3"
 }
