--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,7 @@
       "headers": [
         {
           "key": "Strict-Transport-Security",
-          "value": "max-age=63072000"
-        },
-        {
-          "key": "includeSubDomains",
-          "value": "preload"
+          "value": "max-age=63072000; includeSubDomains; preload"
         }
       ]
     }
