--- a/renovate.json
+++ b/renovate.json
@@ -1,13 +1,23 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
+    "config:best-practices",
     "config:js-app",
-    ":disableRateLimiting",
-    ":maintainLockFilesWeekly",
-    ":label(dependencies)",
     ":assignAndReview(Mogyuchi)",
-    ":semanticCommits",
-    ":disablePrControls"
+    ":disablePrControls",
+    ":labels(dependencies)",
+    ":maintainLockFilesWeekly",
+    ":pathSemanticCommitType(.github/workflows/**, ci)",
+    ":prHourlyLimitNone",
+    ":rebaseStalePrs",
+    ":semanticCommits"
   ],
-  "rebaseWhen": "never"
+  "prConcurrentLimit": 3,
+  "packageRules": [
+    {
+      "matchDepTypes": ["dependencies", "require"],
+      "semanticCommitType": "deps",
+      "semanticCommitScope": null
+    }
+  ]
 }
