--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
     "prettier": "3.5.3",
     "typescript": "5.8.2"
   },
-  "packageManager": "pnpm@10.6.5"
+  "packageManager": "pnpm@10.6.5",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "sharp"
+    ]
+  }
 }
